--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   timezone: ^0.9.2
   
   # Internationalization
-  intl: ^0.18.1
+  intl: 0.19.0
   flutter_gen: ^5.4.0
   
   # UI Components
