--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,44 @@
 # OncoNutri+ Project Root .gitignore
 
-# Environment files
+# Environment files - CRITICAL: Never commit these
 .env
 .env.local
 .env.*.local
+**/.env
+**/.env.local
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+.venv/
+venv/
+ENV/
+env/
+*.egg-info/
+.pytest_cache/
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+package-lock.json
 
 # Logs
 logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
 
 # OS files
 .DS_Store
 Thumbs.db
 desktop.ini
+*.swp
 
 # IDE
 .vscode/
@@ -20,23 +46,51 @@ desktop.ini
 *.swp
 *.swo
 *~
+.vs/
 
 # Temporary files
 *.tmp
 *.temp
 .cache/
+*.bak
 
 # Build outputs
 dist/
 build/
 *.zip
 *.tar.gz
+out/
 
-# Database backups
+# Database backups and local DBs
 *.sql.backup
 backup_*.sql
+*.db
+*.sqlite
+*.sqlite3
 
-# Secrets
+# Secrets and credentials - CRITICAL
 *.pem
 *.key
 secrets/
+credentials/
+*_credentials.json
+*.p12
+
+# Flutter/Dart specific
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+coverage/
+lib/generated_plugin_registrant.dart
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+
+# Machine Learning Models (optional - remove if models should be tracked)
+# *.h5
+# *.keras
+# *.pkl
+# *.pt
+# *.pth
