Remove large dataset files from repository
- Exclude nutrition_data CSV files (2+ GB total) from git tracking
- Exclude cancer_data CSV files (68+ MB) from git tracking
- Update .gitignore to exclude these directories permanently
- Add datasets/README.md with instructions to obtain datasets
- Files exceed GitHub's 100MB limit per file
- Use USDA FoodData Central official source for nutrition data
- Curated JSON database (118 foods) remains in repo for core functionality

--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,11 @@ backup_*.sql
 *.sqlite
 *.sqlite3
 
+# Large dataset files (use Git LFS or external storage)
+backend/datasets/nutrition_data/
+backend/datasets/cancer_data/cancer_patients.csv
+backend/datasets/cancer_data/comprehensive_food_database.csv
+
 # Secrets and credentials - CRITICAL
 *.pem
 *.key
