--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_local_notifications: ^17.0.0
   timezone: ^0.9.2
   intl: ^0.19.0
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
